
No release numbers
------------------
 - Tue Sep 11 16:41:11 PDT 2001
  - Fix chat invites.
  - Keep faimtest from passing va_list's. That scares me.

 - Tue Sep 11 04:42:28 PDT 2001
  - Fix faim_internal/export confusion for the TLV functions
  - Add aim_addtlvtochain_userinfo() (used by AP)
  - Clean up ICBM Channel 1 parsing ever so slightly
  - Add multipart message support in both directions, and some 
      fun examples of it in faimtest.
  - Yes, I'm insane.

 - Mon Sep 10 06:15:43 PDT 2001
  - Remove $Id line from md5.h. I really really hate those things.
  - Remove all that locking crap. It never worked right anyway.
  - Add conn->inside for things that should never ever be seen by clients
  - Store supported groups list for each connection
  - Support migrations.
   - faimtest now theoretically supports doing this.  It happens so rarely
       that it makes it difficult to test.  For more complicated clients, a
       flag will have to be kept so that some things that happen during login
       don't get triggered the second time around.  But faimtest doesn't have
       such problems.
  - Added some random commentary.

 - Sun Sep  9 03:01:28 PDT 2001
  - Three fixes in directim for gaim.  It works now. Yay.

 - Sat Sep  8 21:26:27 PDT 2001
  - Minor bug directim_connect

 - Sat Sep  8 20:18:34 PDT 2001
  - Split up the ICBM Channel 2 handlers a bit more
  - Add a stub parser for recieving buddy lists.  It will stay that way until
      someone decides on a good API for passing lists like this to the client.
      In case someone does, the same standard will be used for setbuddylist and
      the as yet nonexistant support for server-side buddy lists.
  - Make infochange work again. I still don't like it, but I don't want to 
      fix it.

 - Sat Sep  8 19:05:05 PDT 2001
  - Redo ICQ login
  - Fix search by email (oops).

 - Sat Sep  8 17:07:09 PDT 2001
  - Fix directim so you can do it more than once without crashing.